Fix BufferedResourceLoader so it only makes Range requests when a subset of the file is needed.

BUG=74975
TEST=none

Review URL: http://codereview.chromium.org/6815012

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@82061 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 4a4f9493c9772dd8ba6329b15b193c33d24db59d